# AHE-on-GPU

./: CMakeLists.txt  README.md
src/: ahe_cpu.cpp  ahe_cpu.h  ahe_gpu.cpp  ahe_gpu.h  ahe_gpu_kernels.cu  defines.h  main.cpp  sdt_cpu.cpp  sdt_cpu.h  sdt_gpu.cpp  sdt_gpu.h  sdt_gpu_kernels.cu
